kubeflow/contrib/kserve/build/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_inferencegraph.serving.kserve.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/serving-cert
    internal.kpt.dev/upstream-identifier: admissionregistration.k8s.io|ValidatingWebhookConfiguration|default|inferencegraph.serving.kserve.io
  creationTimestamp: null
  labels:
    app: kserve
    app.kubernetes.io/name: kserve
  name: inferencegraph.serving.kserve.io
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: Cg==
    service:
      name: kserve-webhook-server-service
      namespace: kubeflow
      path: /validate-serving-kserve-io-v1alpha1-inferencegraph
  failurePolicy: Fail
  name: inferencegraph.kserve-webhook-server.validator
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferencegraphs
  sideEffects: None
